<resources>
    <string name="app_name">ExamenII_LpIII</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_register">Register</string>


    <string name="message_name">Nombres</string>
    <string name="message_lastNames">Apellidos</string>
    <string name="message_nameUser">Nombre Usuario</string>
    <string name="btn_msg_save">Guardar</string>
    <string name="action_back">Atras</string>
    <string name="action_synchronize">Sincronizar</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Borrar</string>
    <string name="action_activate">Activar</string>
    <string name="action_contacts">Contactos</string>
    <string name="action_about">Acerca de</string>
    <string name="message_estatus">Activo</string>








    <string name="rad_active">Activo</string>
    <string name="rad_inactive">Inactivo</string>







</resources>
