<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.usuario.examenii_lpiii.Register"



    tools:showIn="@layout/activity_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/area_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    >

                    <EditText
                        android:id="@+id/txtNombre"
                        android:layout_width="340dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/message_name"
                        android:layout_below="@+id/textView"
                        android:layout_alignStart="@+id/textView" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_lastNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_name"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_lastNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/txtLastNames"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/message_lastNames"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/area_nameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_nameUser"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_nameUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/txtnameUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/message_nameUser"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/area_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_status"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">


                    <RadioGroup
                        android:id="@+id/radioGroupStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <RadioButton
                            android:id="@+id/radioActive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rad_active"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/radioInactive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rad_inactive" />

                    </RadioGroup>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>




            <LinearLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_msg_save"
                    />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
